correction (unit test in EpicTest)